<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EVerApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">登录</string>
    <string name="select_login">登录/注册</string>
    <string name="collect">收藏</string>
    <string name="order">我的预约</string>
    <string name="message">消息通知</string>
    <string name="title_activity_recommend">RecommendActivity</string>
    <string name="title_activity_nearby">NearbyActivity</string>
    <string name="title_activity_complete">CompleteActivity</string>
    <string name="title_activity_comment">CommentActivity</string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="setting">设置</string>
    <string name="exit">退出登录</string>
    <string name="maps">导航</string>
    <string name="orders">预约</string>
    <string name="money">我的钱包</string>
    <string name="money_tabel">我的充电豆</string>
    <string name="recharge">充值</string>
    <string name="withdraw_cash">提现</string>
    <string name="my_stake">我的车桩</string>
    <string name="stake_regist">车桩注册</string>
    <string name="province">省份</string>
    <string name="city">城市</string>
    <string name="address">地址</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_navi">NaviActivity</string>
    <string name="title_activity_chargestake_detail">ChargestakeDetailActivity</string>
    <string name="title_activity_choose_on_map">ChooseOnMapActivity</string>
    <string name="title_activity_charge_confirm">ChargeConfirmActivity</string>
    <string name="title_activity_mes_notif">MesNotifActivity</string>

</resources>
