<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <include
		android:id="@+id/money_layout"
        layout="@layout/titlebar" />
    <LinearLayout
        android:id="@+id/money_count_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/money_layout"
        android:background="@color/white"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp" >
        <ImageView
            android:id="@+id/money_img"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/icon_money"
            >  
        </ImageView>
        <TextView
            android:id="@+id/money_tabel"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/money_tabel"
            android:lineSpacingMultiplier="1.2"
            android:textSize="25sp"
            ></TextView>
        <TextView 
            android:id="@+id/money_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="500个"
            android:lineSpacingMultiplier="1.2"
             android:layout_marginBottom="10dp"
            android:textSize="25sp"
            android:textStyle="bold"
            />
    </LinearLayout>
        <LinearLayout
         android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/money_count_layout"
        android:background="@color/white"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
            >
         <Button 
             android:id="@+id/recharge"
             android:layout_width="240dp"
             android:layout_height="40dp"
             android:layout_marginBottom="10dp"
             android:text="@string/recharge"
             android:textColor="@color/white"
             android:background="@drawable/btn_style_green"
             />  
             <Button 
             android:id="@+id/withdraw_cash"
             android:layout_width="240dp"
             android:layout_height="40dp"
             android:text="@string/withdraw_cash"
             android:background="@drawable/btn_style_white"
             />   
        </LinearLayout>
</RelativeLayout>