<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/center_top_layout"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/title_border" >

        

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="个人中心"
            android:textSize="20sp">
        </TextView>

        <Button
            android:id="@+id/center_settting_btn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/setting" >

        </Button>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/center_login_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/center_top_layout"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp" 
        android:minHeight="30dp"
        >

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/user_login_btn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:drawableLeft="@drawable/applogo"
                android:paddingLeft="10dp"
                android:paddingRight="160dp"
                android:text="@string/select_login"
                android:textSize="16sp" />

            <Button
                android:id="@+id/user_info_btn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:drawableLeft="@drawable/main_logo"
                android:drawablePadding="20dp"
                android:drawableRight="@drawable/arrow3x"
                android:gravity="center_vertical|right"
                android:paddingLeft="10dp"
                android:paddingRight="20dp"
                android:text="胡同学"
                android:textSize="16sp"
                android:visibility="gone" />

        </FrameLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/action_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/center_login_layout"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:minHeight="30dp"
        android:background="@color/white"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/user_like_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:drawableLeft="@drawable/center_collect"
            android:paddingLeft="10dp"
            android:text="@string/collect"
            android:textSize="16sp" />

        <Button
            android:id="@+id/user_order_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:drawableLeft="@drawable/center_order"
            android:paddingLeft="10dp"
            android:text="@string/order"
            android:textSize="16sp" >
        </Button>

        <Button
            android:id="@+id/user_message_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:drawableLeft="@drawable/center_message"
            android:paddingLeft="10dp"
            android:text="@string/message"
            android:textSize="16sp" >
        </Button>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/list_select_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/action_layout"
        android:background="@color/white"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >
        <ListView
            android:id="@+id/center_list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:divider="@color/mistyrose"
            android:dividerHeight="1dip"
            >          
        </ListView>
    </LinearLayout>

</RelativeLayout>